<resources>
    <string name="app_name">Base NoteSaver</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="textview">TextView</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_base">Base NoteSaver</string>
    <string name="notes_icon">Notes Icon</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_text_hint">Note Text</string>
    <string name="send_as_email">Send as email</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="display_name">Display Name</string>
    <string name="profile_settings">Profile</string>

    <!-- Array Members -->
    <string-array name="social">
        <item>Facebook</item>
        <item>Google</item>
        <item>Twitter</item>
        <item>Instagram</item>
    </string-array>

    <string-array name="social_media">
        <item>http://www.facebook.com</item>
        <item>http://google.com</item>
        <item>http://twitter.com</item>
        <item>http://instagram.com</item>
    </string-array>


    <string name="default_social">http://google.com</string>
    <string name="pref_social_media">Preferred Social Media</string>
</resources>
