<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_face_black_24dp"
        app:key="user_name"
        app:title="@string/display_name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:defaultValue="true"
        app:icon="@drawable/ic_email_black_24dp"
        app:key="user_email"
        app:singleLine="true"
        app:title="@string/pref_title_email_address"
        app:useSimpleSummaryProvider="true"
         />
    <ListPreference
        android:defaultValue="@string/default_social"
        android:entries="@array/social"
        android:entryValues="@array/social_media"
        android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
        android:key="list_preference_1"
        android:title="@string/pref_social_media"
        app:useSimpleSummaryProvider="true" />


</PreferenceScreen>
