<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.example.basenotesaver.SettingsActivity$MessagesFragment"
        app:icon="@drawable/messages"
        app:key="messages_header"
        app:title="@string/messages_header" />

    <Preference
        app:fragment="com.example.basenotesaver.SettingsActivity$EmailFragment"
        app:icon="@drawable/ic_person_black_24dp"
        app:key="user_email_address"
        app:title="@string/profile_settings" />

    <Preference
        app:fragment="com.example.basenotesaver.SettingsActivity$SyncFragment"
        app:icon="@drawable/sync"
        app:key="sync_header"
        app:title="@string/sync_header" />

</PreferenceScreen>
